<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2014 The Android Open Source Project

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="0dp"
    tools:layout_editor_absoluteX="0dp" >

    <TextView
        android:id="@+id/Time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/time_n00_00_00"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.513"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <NumberPicker
        android:id="@+id/Level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/Speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/speed_n0_0_km_h"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline3"
        android:layout_marginRight="16dp" />

        <TextView
            android:id="@+id/Power"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/power_n0_0_w"
            android:textAlignment="center"
            android:gravity="center"
            app:layout_constraintRight_toLeftOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/guideline5"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline4" />

        <TextView
            android:id="@+id/RPM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/rpm_n0"
            android:textAlignment="center"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="@+id/guideline6"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="@+id/guideline3"
            app:layout_constraintRight_toLeftOf="@+id/guideline"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2" />

    <TextView
            android:id="@+id/Distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/distance_n0_0_km"
            android:textAlignment="center"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="@+id/guideline5"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="@+id/guideline3"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintVertical_bias="0.538"
            app:layout_constraintRight_toLeftOf="@+id/guideline"
            android:layout_marginRight="16dp" />

        <TextView
            android:id="@+id/Calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/calories_n0_cal"
            android:textAlignment="center"
            android:gravity="center"
            app:layout_constraintRight_toLeftOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/guideline6"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2" />

        <TextView
            android:id="@+id/Heart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/heart_n0"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/guideline4"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline6"
            app:layout_constraintVertical_bias="0.461"
            app:layout_constraintRight_toLeftOf="@+id/guideline"
            android:layout_marginRight="16dp" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline3"
            app:layout_constraintGuide_percent="0.4"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="237dp" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline4"
            app:layout_constraintGuide_percent="0.4"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="125dp"
            tools:layout_editor_absoluteX="0dp" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline5"
            app:layout_constraintGuide_percent="0.2"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="62dp"
            tools:layout_editor_absoluteX="0dp" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline6"
            app:layout_constraintGuide_percent="0.6"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="187dp"
            tools:layout_editor_absoluteX="0dp" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            app:layout_constraintGuide_percent="0.8"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="474dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="@+id/guideline5"
            android:layout_marginTop="16dp" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline2"
            app:layout_constraintGuide_percent="0.8"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="249dp"
            tools:layout_editor_absoluteX="0dp" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_disconnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disconnect" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

</android.support.constraint.ConstraintLayout>
